Creacion de boton de aumentos porcentuales en insumos y productos (GP.38 - GP.41)